--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning Bootstrap V5 with Sass",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "sass --watch scss:assets/css"
   },
   "keywords": [
     "Bootstrap",
